--- a/java_mysql/.classpath
+++ b/java_mysql/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java11">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
@@ -13,5 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/mysql-connector-java-8.0.22.jar" sourcepath="/var/folders/ns/syvps7dj21q2n0qn43b5g3vm0000gn/T/.org.sf.feeling.decompiler1608213438087/source/mysql-connector-java-8.0.22-sources.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
